# YodaScript

./: .travis.yml  CMakeLists.txt  README.md  code_feed.cpp  code_feed.hpp  core.cpp  extend.cpp  extend.hpp  frame.cpp  frame.hpp  lambda.cpp  lambda.hpp  macro.hpp  main.cpp  namespace.cpp  namespace.hpp  namespace_def.cpp  namespace_def.hpp  new_guide.md  object.cpp  object.hpp  operator_ppcs.hpp  operators.cpp  operators.hpp  process_line.cpp  user_variables.cpp  value.cpp  value.hpp
.github/workflows/: c-cpp.yml
examples/: bs_tree.ys  car_oop.ys  lol_ranks.ys
examples/native_extension/: lib.cpp
operators/: basic_math.cpp  basic_math.hpp  boolean_ops.cpp  boolean_ops.hpp  const.cpp  const.hpp  ctl_flow.cpp  ctl_flow.hpp  data_types.cpp  data_types.hpp  errors.cpp  errors.hpp  generic_operators.cpp  generic_operators.hpp  io.cpp  io.hpp  libraries.cpp  libraries.hpp  list_stuff.cpp  list_stuff.hpp  literals.cpp  literals.hpp  math.cpp  math.hpp  objects.cpp  objects.hpp  raw_data.cpp  raw_data.hpp  ref_ops.cpp  ref_ops.hpp  stack_ctl.cpp  stack_ctl.hpp  threads.cpp  threads.hpp  types.cpp  types.hpp
